--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.0.1",
+    "console.table": "^0.10.0",
     "dotenv": "^16.0.0",
+    "figlet": "^1.5.2",
     "inquirer": "^8.2.2",
     "mysql2": "^2.3.3"
   }
